# Template-Python3

./: .env.template  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  core.py  log.py  toast.py
